<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:textColor="#fff"
            android:padding="15dp"
            android:id="@+id/setting"
            android:textSize="20sp"
            android:drawablePadding="10dp"
            android:background="#2FCCF9"
            android:drawableStart="@drawable/ic_arrow_back"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charging_threshold"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/default_setting_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default"
                android:textColor="@android:color/darker_gray"
                android:textSize="23dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minimum and maximum charging level"
                android:textColor="@android:color/darker_gray"
                android:textSize="16dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/default_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/start_charging_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/start_charging_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="Reconnect"

            android:textSize="23dp" />

        <TextView
            android:id="@+id/start_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingBottom="10dp"
            android:text="at 80%"
            android:textSize="16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/stop_charging_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stop_charging_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="Disconnect"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/stop_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="at 100%"
            android:textSize="16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_device_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name_set"
            android:textColor="@android:color/darker_gray"
            android:textSize="23dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setting_device_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button

            android:id="@+id/setting_device_name_read"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/reading" />

        <Button
            android:id="@+id/setting_device_name_but"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/setting" />

    </RelativeLayout>
</LinearLayout>
